test/fixtures/fail/number_0X_uppercase.l4gs.g
; fasmg accepts the `0x` hex prefix only in lowercase. Uppercase X is rejected.
        dd 0X1AB
